2011-10-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Correct befs block counting logic.

	* grub-core/fs/afs.c (GRUB_AFS_BLOCKS_PER_DI_RUN): Replaced with...
	(GRUB_AFS_LOG_BLOCKS_PER_DI_RUN): ... this.
	(GRUB_AFS_BLOCKRUN_LOG_SIZE): New definition.
	(grub_afs_read_inode): Use block_shift.
	(RANGE_SHIFT): New definition.
	(grub_afs_read_block): Account for RANGE_SHIFT, emit errors on
	unexpected conditions, use shifts and appropriate types.
	(GRUB_MOD_INIT): Check the value of GRUB_AFS_BLOCKRUN_LOG_SIZE.

2011-10-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (scan_devices): Check partition.
	* grub-core/disk/lvm.c (do_lvm_scan): Likewise.

2011-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Support BFS (befs) UUID.

	* grub-core/fs/afs.c (grub_afs_inode): Make small_data zero-size.
	(grub_afs_small_data_element_header): New struct.
	(grub_afs_read_inode): Read complete inode. Fix ino type while on it.
	(grub_afs_read_attribute) [MODE_BFS]: New function.
	(grub_afs_iterate_dir): Allocate for complete inode.
	(grub_afs_mount): Likewise.
	(grub_afs_uuid) [MODE_BFS]: New function.
	(grub_afs_fs) [MODE_BFS]: Add .uuid.

2011-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (read_device): Silence spurious warning.
	(zfs_unmount): Fix memory leak.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Support NTFS reparse points.

	* grub-core/fs/ntfs.c (list_file): Set symlink type when appropriate.
	(symlink_descriptor): New struct.
	(grub_ntfs_read_symlink): New function.
	(grub_ntfs_iterate_dir): Use grub_ntfs_read_symlink.
	(grub_ntfs_open): Likewise.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ntfs.h: Add GRUB_NTFS_ prefix. All users updated.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	fstest xnu_uuid subcommand.

	* grub-core/commands/xnu_uuid.c (libgrubkrn): Add
	grub-core/commands/xnu_uuid.c.
	* util/grub-fstest.c (CMD_XNU_UUID): New enum value.